--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
     "activityBarBadge.background": "#08988b",
-    "activityBarBadge.foreground": "#e7e7e7"
+    "activityBarBadge.foreground": "#e7e7e7",
+    "sash.hoverBorder": "#f6e74c"
   },
   "peacock.color": "#F4E11B",
 }
